# vision

./: .bazelrc  .clang-format  .gitignore  LICENSE  MODULE.bazel  README.md
docker/: Dockerfile.cuda
docker/scripts/: whl.sh
docs/context/: README.md  adr-template.md  apollo-lite-replacement.md  camera-models.md  camera.md  context-practices.md  driveworks-replacement.md  lidar.md  todo.md
scripts/format/: install_format.sh
tests/python/: verify_camera.py
vision/: BUILD.bazel  brown_camera_model.cc  brown_camera_model.h  camera_model.h  camera_models.h  camera_models_test.cc  omnidirectional_camera_model.cc  omnidirectional_camera_model.h  pinhole_camera_model.cc  pinhole_camera_model.h
vision/camera/: BUILD.bazel  brown_camera_model.cc  brown_camera_model.h  camera.h  camera_model.h  camera_models.h  camera_models_test.cc  omnidirectional_camera_model.cc  omnidirectional_camera_model.h  pinhole_camera_model.cc  pinhole_camera_model.h
vision/lidar/: BUILD.bazel  crop_box_filter_test.cc  decimation_filter_test.cc  lidar.h  point_cloud_buffer_test.cc  point_cloud_view_test.cc  range_image_test.cc  types.h
vision/lidar/core/: point_cloud.cc  point_cloud.h  point_cloud_buffer.cc  point_cloud_buffer.h  rigid_transform.h
vision/lidar/filters/: crop_box_filter.cu  crop_box_filter.h  decimation_filter.cu  decimation_filter.h
vision/lidar/filters/internal/: device_filter_utils.cuh
vision/lidar/memory/: buffer.cu  buffer.h  buffer_pool.cc  buffer_pool.h
vision/lidar/range_image/: range_image.h  range_image_builder.cu  range_image_builder.h
vision/lidar/runtime/: cuda_stream.h
vision/pybind/: BUILD.bazel  camera_pybind.cc
