module(
	name = "vision",
	version = "0.1.0",
)

bazel_dep(name = "eigen", version = "5.0.1")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_cuda", version = "0.3.0")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
	name = "cuda",
	toolkit_path = "/usr/local/cuda",
)
use_repo(cuda, "cuda")
