cc_library(
	name = "pinhole_camera_model",
	srcs = [
		"pinhole_camera_model.cc",
	],
	hdrs = [
		"camera_model.h",
		"pinhole_camera_model.h",
	],
	deps = [
		"@eigen//:eigen",
	],
	visibility = ["//visibility:public"],
)

cc_library(
	name = "omnidirectional_camera_model",
	srcs = [
		"omnidirectional_camera_model.cc",
	],
	hdrs = [
		"camera_model.h",
		"omnidirectional_camera_model.h",
	],
	deps = [
		"@eigen//:eigen",
	],
	visibility = ["//visibility:public"],
)

cc_library(
	name = "brown_camera_model",
	srcs = [
		"brown_camera_model.cc",
	],
	hdrs = [
		"brown_camera_model.h",
		"camera_model.h",
	],
	deps = [
		"@eigen//:eigen",
	],
	visibility = ["//visibility:public"],
)
